[fian] add some red zone, ganti kontak

--- a/css/map-css/style.css
+++ b/css/map-css/style.css
@@ -1,6 +1,6 @@
 
 .mapael .map {
-    background-color: #eee;
+    background-color: #fff;
     margin-bottom: 10px;
     position: relative;
     border-radius: 5%;
