--- a/css/style2.css
+++ b/css/style2.css
@@ -1,7 +1,6 @@
-.tableFixHead          { overflow-y: auto; height: 300px; }
+.tableFixHead          { overflow-y: auto; max-height: 500px; }
 .tableFixHead thead th { position: sticky; top: 0; }
 
-/* Just common table stuff. Really. */
 .tableFixHead table  { border-collapse: collapse; width: 100%; }
 .tableFixHead th, td { padding: 4px 8px; }
 .tableFixHead th     { background:#eee; }
